# longhand

./: .gitignore  .gitmodules  Package.swift  README.md  jitpack.yml  package.json  plan.md  pnpm-lock.yaml  product-brief.md  settings.gradle.kts  tsconfig.base.json
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  deploy.yml
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/e2e/: smoke.mjs
apps/web/public/: 404.html  CNAME  robots.txt  sitemap.xml
apps/web/scripts/: gen-og.ts  gen-showcase.ts  sync-models.mjs
apps/web/src/: App.tsx  BuildPage.tsx  CodeBlock.tsx  CodeDialog.tsx  ExportDialog.tsx  Root.tsx  StylePicker.tsx  UsesPage.tsx  controls.tsx  export.ts  gifenc.d.ts  highlight.ts  main.tsx  protocol.ts  share.ts  showcase.ts  snippets.ts  styles.css  worker.ts
apps/web/src/components/ui/: collapsible.tsx  dialog.tsx  slider.tsx
apps/web/test/: highlight.test.ts
docs/: android.md  plan.md  product-brief.md
gradle/: libs.versions.toml
tools/: export_weights.py  make_goldens.py  make_style_previews.py  pyproject.toml  quantize_weights.py
